<resources>
    <string name="app_name">Quick_Pet</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass">*********</string>
    <string name="required">Required</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="camera">camera</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
    <string name="breed">Breed</string>
    <string name="birthday">Birthday</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="calendar">Calendar</string>
    <string name="colour">Colour</string>
    <string name="intact">Intact</string>
    <string name="select_a_breed">Select a breed</string>
    <string name="appointment">Appointment</string>
    <string name="fleas_ticks"><![CDATA[Fleas  & Ticks]]></string>
    <string name="photos">Photos</string>
    <string name="sounds">Sounds</string>
    <string name="deworming">Deworming</string>
    <string name="vaccination">Vaccination</string>
    <string name="grooming">Grooming</string>
    <string name="medical">Medical</string>
    <string name="pet_face">pet_face</string>
    <string name="appointments">Appointments</string>
    <string name="arrow">Arrow</string>
    <string name="new_appointment">New appointment</string>
    <string name="date">Date</string>
    <string name="reminder">Reminder</string>
    <string name="direction">Direction</string>
    <string name="time">Time</string>
    <string name="vet_visit">Vet visit</string>
    <string name="vet_tool">Vet tool</string>
    <string name="kg">Kg</string>
    <string name="yes">Yes</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="surgery">Surgery</string>
    <string name="weight">Weight</string>
    <string name="veterinarian_tool">Veterinarian tool</string>
    <string name="adding_vet_visit">Adding Vet visit</string>
    <string name="vet_name">Vet name</string>
    <string name="adding_allergy">Adding Allergy</string>
    <string name="mm_yyyy">mm_yyyy</string>
    <string name="symptoms">Symptoms</string>
    <string name="medication">Medication</string>
    <string name="medic1">Medicine 1</string>
    <string name="medic2">Medicine 2</string>
    <string name="allergy_name">Allergy name</string>
    <string name="allergy">Allergy</string>
    <string name="health_condition">Health Condition</string>
    <string name="veterinary">Veterinary</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="add">Add</string>
    <string name="start_date">Start date</string>
    <string name="adding_grooming">Adding Grooming</string>
    <string name="place">Place</string>
    <string name="adding_health_condition">Adding Health Condition</string>
    <string name="condition_name">Condition Name</string>
    <string name="effects">Effects</string>
    <string name="paws_print">paws print</string>
    <string name="reason">Reason</string>
    <string name="new_pet">New Pet</string>
    <string name="adding_a_surgery">Adding a Surgery</string>
    <string name="note">Note</string>
    <string name="vaccine">Vaccine</string>
    <string name="adding_vaccine">Adding Vaccine</string>
    <string name="fleas_and_ticks">Fleas and Ticks</string>
    <string name="add_grooming">Add grooming</string>
    <string name="pet_paws">pet paws</string>
    <string name="add_pet">Add pet</string>
    <string name="dog_image">Dog image</string>
    <string name="add_photo">Add photo</string>
    <string name="add_vaccine">Add Vaccine</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="reset_password">Reset Password</string>
    <string name="notifications">Notifications</string>
    <string name="no">No</string>
    <string name="account">Account</string>
    <string name="title">Title</string>
    <string name="pets">Pets</string>
    <string name="bin">Bin</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="petColour">
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Cream</item>
        <item>Ginger</item>
        <item>Gold</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Red</item>
        <item>White</item>
        <item>Spots</item>
    </string-array>
    <string-array name="intact">
        <item>Neutered/Spayed</item>
        <item>Intact</item>
    </string-array>
    <string-array name="app_type">
        <item>Veterinarian</item>
        <item>Grooming</item>
    </string-array>


</resources>