<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/homeT"
        android:icon="@drawable/pata"
        android:title=""
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/sounds"
        android:icon="@drawable/music"
        android:title="@string/sounds" />
    <item
        android:id="@+id/photos"
        android:icon="@drawable/photo"
        android:title="@string/photos" />


    <item
        android:id="@+id/logout"
        android:iconTint="@null"
        android:title="@string/logout" />
    <item
        android:id="@+id/exit"
        android:iconTint="@null"
        android:title="@string/exit" />
</menu>