<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/link_water"
    tools:context=".Main_menu_pet1">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/green_button"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.MaterialToolbar>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/circle_white"
        android:contentDescription="@string/logo"
        android:foregroundGravity="center"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="537dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePet"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:contextClickable="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            app:civ_border_color="@color/green_button"
            app:civ_border_width="20dp"
            app:civ_circle_background_color="@color/green_button" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/appointment"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/green_button"
                android:drawableLeft="@drawable/alarm_add"
                android:paddingStart="9dp"
                android:paddingEnd="10dp"
                android:text="@string/appointment"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/medical"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:drawableLeft="@drawable/medical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/medical"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null"
                tools:ignore="RtlHardcoded" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/grooming"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/green_button"
                android:text="@string/grooming"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/vaccination"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/vaccination"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/fleas"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/green_button"
                android:text="@string/fleas_ticks"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/deworming"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/deworming"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null" />
        </TableRow>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            android:divider="@color/green_button" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/sounds"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/green_button"
                android:text="@string/sounds"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/photos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/photos"
                android:textAllCaps="false"
                android:textColor="@color/white_lila"
                android:textSize="16sp"
                android:textStyle="italic"
                app:backgroundTint="@null" />
        </TableRow>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>